# device-accessibility

./: .gitignore  Cargo.toml  __test__.ts  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
examples/: control.ts  observer.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: capture.rs  clipboard.rs  controller.rs  keyboard.rs  lib.rs  macros.rs  mapper.rs  mouse.rs  observer.rs  rdev_controller.rs  utils.rs
src/keyboard/: controller.rs  listener.rs
src/mapper/: dq_mapper.rs  enigo_mapper.rs
